Initial checkin of faux Twitter lite app

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -23,6 +23,7 @@
 	<link rel="icon" type="image/png" href="/assets/icons/favicon-32x32.png" sizes="32x32">
 	<link rel="icon" type="image/png" href="/assets/icons/favicon-16x16.png" sizes="16x16">
 	<link rel="manifest" href="./manifest.json">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body></body>
 </html>
