--- a/src/index.ejs
+++ b/src/index.ejs
@@ -8,20 +8,16 @@
 		<link rel="preload" href="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>" as="script">
 	<% } %>
 	<meta charset="utf-8">
-	<title>preact-boilerplate</title>
+	<title>Twitter lite</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
-	<meta name="description" content="preact-boilerplate">
-	<meta name="msapplication-TileColor" content="#673ab8">
-	<meta name="msapplication-TileImage" content="./assets/icons/mstile-150x150.png">
+	<meta name="description" content="Twitter lite">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-	<meta name="apple-mobile-web-app-title" content="preact-boilerplate">
-	<meta name="application-name" content="preact-boilerplate">
+	<meta name="apple-mobile-web-app-title" content="Twitter lite">
+	<meta name="application-name" content="Twitter lite">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="theme-color" content="#673ab8">
-	<link rel="apple-touch-icon" sizes="180x180" href="./assets/icons/apple-touch-icon.png">
-	<link rel="icon" type="image/png" href="/assets/icons/favicon-32x32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="/assets/icons/favicon-16x16.png" sizes="16x16">
+	<link rel="icon" href="/assets/icons/favicon.ico" sizes="16x16">
 	<link rel="manifest" href="./manifest.json">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
