Changed theme color

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -16,7 +16,7 @@
 	<meta name="apple-mobile-web-app-title" content="Twitter lite">
 	<meta name="application-name" content="Twitter lite">
 	<meta name="format-detection" content="telephone=no">
-	<meta name="theme-color" content="#673ab8">
+	<meta name="theme-color" content="#1DA1F2">
 	<link rel="icon" href="/assets/icons/favicon.ico" sizes="16x16">
 	<link rel="manifest" href="./manifest.json">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
