Project rename (twitter-lite => tweets)

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -8,13 +8,13 @@
 		<link rel="preload" href="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>" as="script">
 	<% } %>
 	<meta charset="utf-8">
-	<title>Twitter lite</title>
+	<title>Tweets</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
-	<meta name="description" content="Twitter lite">
+	<meta name="description" content="Tweets">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-	<meta name="apple-mobile-web-app-title" content="Twitter lite">
-	<meta name="application-name" content="Twitter lite">
+	<meta name="apple-mobile-web-app-title" content="Tweets">
+	<meta name="application-name" content="Tweets">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="theme-color" content="#1DA1F2">
 	<link rel="icon" href="/assets/favicon.ico" sizes="16x16">
