--- a/src/pages/Test/Test.css
+++ b/src/pages/Test/Test.css
@@ -2,6 +2,9 @@
   width: 590px;
   max-width: 100%;
   margin: 0 auto;
+}
+
+.TweetWrapper {
   background-color: #fff;
   border: 1px solid #e6ecf0;
 }
